<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailStoryActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp">

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_placeholder"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/image_placeholder"
            android:transitionName="story_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/story_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/story_owner"
            android:fontFamily="@font/poppins_regular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="story_owner"
            app:layout_constraintTop_toBottomOf="@id/iv_story"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/story_created_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/story_date"
            android:fontFamily="@font/montserrat_regular"
            android:transitionName="story_date"
            app:layout_constraintTop_toBottomOf="@id/story_owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/story_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/story_description"
            android:fontFamily="@font/montserrat_regular"
            android:transitionName="story_description"
            app:layout_constraintTop_toBottomOf="@id/story_created_at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>